<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LearnBreed">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="622dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="622dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/catPic"
                android:layout_width="match_parent"
                android:layout_height="412dp"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/reloadView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:onClick="resetCatPic" />

            <TextView
                android:id="@+id/breedNameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/breedName"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/breedOriginView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/breedOrigin"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/breedTemperamentView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/breedTemperament"
                android:textAlignment="center"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/breedLifespanView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/breedLifespan"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/breedWeightView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/breedWeight"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/seperatorView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="--------------------"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/breedDescriptionView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/breedDes"
                android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/newBreedView"
        android:layout_width="234dp"
        android:layout_height="54dp"
        android:onClick="showNewBreedOnCreate"
        android:text="@string/refreshBreed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

</androidx.constraintlayout.widget.ConstraintLayout>